--- a/css/style.css
+++ b/css/style.css
@@ -341,37 +341,37 @@ table {
   text-align: center; }
 
 .Carousel {
-  position: relative;
-  width: 100%;
-  height: 500px;
-  overflow: hidden; }
+  width: 1000px;
+  height: 250px;
+  overflow: hidden;
+  position: relative; }
   .Carousel-Wrapper {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 4000px; }
+    position: absolute; }
     .Carousel-Wrapper li {
-      float: left;
       width: 1000px;
-      height: 100%;
-      display: inline; }
-  .Carousel-Prev, .Carousel-Next {
+      height: 250px;
+      border: 1px solid #EEE;
+      box-sizing: border-box;
+      float: left; }
+  .Carousel-Button {
     background-repeat: no-repeat;
     height: 100%;
     position: absolute;
     background: #EEE;
+    opacity: .7;
     cursor: pointer;
     display: table;
     height: 100%; }
-    .Carousel-Prev i, .Carousel-Next i {
+    .Carousel-Button i {
       display: table-cell;
       text-align: center;
       vertical-align: middle;
-      color: #666; }
-  .Carousel-Prev {
-    left: 0; }
-  .Carousel-Next {
-    right: 0; }
+      color: #666;
+      font-size: 40px; }
+    .Carousel-Button-Prev {
+      left: 0; }
+    .Carousel-Button-Next {
+      right: 0; }
 
 body {
   font-family: "Rounded Mplus 1c", sans-serif;
