--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,6 @@ table {
   .Navi {
     position: fixed;
     transform: translateX(-800px);
-    transition-duration: 5.0s;
     top: 0;
     width: 100%;
     height: 100%;
@@ -146,7 +145,6 @@ table {
       position: static;
       right: 0;
       bottom: 0;
-      transition-duration: 2.0s;
       opacity: 0; }
       .Navi ul li {
         float: none;
@@ -164,7 +162,6 @@ table {
       -webkit-overflow-scrolling: touch;
       transform: translateX(0);
       opacity: 1;
-      transition-duration: 0.5s;
       z-index: 10; }
     .Navi-Open span:nth-child(1) {
       top: 6px;
@@ -179,8 +176,7 @@ table {
       -moz-transform: rotate(-45deg);
       transform: rotate(-45deg); }
     .Navi-Open ul {
-      opacity: 1;
-      transition-duration: 4.0s; }
+      opacity: 1; }
     .Navi-Inner {
       float: left;
       width: 70%;
