--- a/sass/component/_Navi.scss
+++ b/sass/component/_Navi.scss
@@ -61,7 +61,7 @@
     .Navi {
         position: fixed;
         transform: translateX(-800px);
-        transition-duration: 5.0s;
+        // transition-duration: 5.0s;
         top: 0;
         width: 100%;
         height: 100%;
@@ -72,7 +72,7 @@
             position: static;
             right: 0;
             bottom: 0;
-            transition-duration: 2.0s;
+            // transition-duration: 2.0s;
             opacity: 0;
 
             li {
@@ -101,7 +101,7 @@
                 -webkit-overflow-scrolling: touch;
                 transform: translateX(0);
                 opacity: 1;
-                transition-duration: 0.5s;
+                // transition-duration: 0.5s;
                 z-index: 10;
             }
 
@@ -126,7 +126,7 @@
 
             ul {
                 opacity: 1;
-                transition-duration: 4.0s;
+                // transition-duration: 4.0s;
             }
         }
         &-Inner {
